A scrollbar appearing / disappearing depending on grid height can be an issue :-( to hide it, I'll just set overflow: scroll on the container.

--- a/demo/src/App.Builder.css
+++ b/demo/src/App.Builder.css
@@ -2,6 +2,10 @@ body, body * {
   box-sizing: border-box;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 .App {
   position: relative;
 }
